[project]
name = "moge2"
description = ""
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# The versions are not specified since MoGe should be compatible with most versions of the packages.", "# If incompatibilities are found, consider upgrading to latest versions or installing the following recommended version of the package.", "torch           # >= 2.0.0", "torchvision", "opencv-python   # ==4.10.0.84", "scipy           # ==1.14.1", "matplotlib      # ==3.9.2", "trimesh         # ==4.5.1", "pillow          # ==10.4.0", "huggingface_hub # ==0.25.2", "git+https://github.com/EasternJournalist/utils3d.git@c5daf6f6c244d251f252102d09e9b7bcef791a38"]

[project.urls]
Repository = "https://github.com/zade23/ComfyUI-MoGe2"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/zade23/ComfyUI-MoGe2/wiki"
"Bug Tracker" = "https://github.com/zade23/ComfyUI-MoGe2/issues"

[tool.comfy]
PublisherId = "zhandroid"
DisplayName = "ComfyUI-MoGe2"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

